ddi/mbor/derive/tests/compile_tests/03-enum-invalid.rs
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.

use azihsm_ddi_mbor_derive::Ddi;
use open_enum::open_enum;

#[derive(Ddi)]
enum InvalidEnum2 {
    True = 0,
}

#[derive(Ddi)]
#[ddi(enumeration)]
struct DoubleTupleStruct(u32, u32);

#[derive(Ddi)]
#[ddi(enumeration)]
struct IncorrectEnumDataType(u16);

#[open_enum]
#[derive(Ddi)]
#[repr(u64)]
#[ddi(enumeration)]
pub enum InvalidOpenEnumDataType {
    EnumVal1 = 1001,
}

#[open_enum]
#[derive(Ddi)]
#[repr(u32)]
pub enum InvalidEnumMissingEnumerationTag {
    EnumVal1 = 1001,
}

#[open_enum]
#[derive(Ddi)]
#[repr(u32)]
#[ddi(enumeration)]
pub enum ValidOpenEnum {
    EnumVal1 = 1001,
}

fn main() {}
